examples/grpc-s2s/hello/envoy-proxy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                  grpc: {}
                route:
                  cluster: hello
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: hello
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    common_lb_config:
      healthy_panic_threshold:
        value: 50
    health_checks:
      - timeout: "1s"
        interval: "5s"
        unhealthy_threshold: 5
        healthy_threshold: 5
        grpc_health_check:
          service_name: "Hello"
          authority: ""
          initial_metadata: []
    load_assignment:
      cluster_name: hello
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: hello
                port_value: 8081
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9090
